# Lirox

./: .env.example  .env.local  .gitignore  ADVANCED.md  ADVANCED_ARCHITECTURE.md  AUDIT_REPORT_v1.1.0.md  AUDIT_SUMMARY.md  CHANGELOG.md  CODE_INSPECTION.md  COMMANDS.md  CONTRIBUTING.md  LIROX_HANDBOOK.md  LIROX_SYSTEM_PROMPT.md  MANIFEST.in  PROMPT_ENGINEERING.md  README.md  SOUL.md  TEST_REPORT.md  USE_LIROX.md  VERSION_MIGRATION.md  apply_fixes_1.py  check_syntax.py  cleanup.sh  diag_output.txt  gemma-compact.Modelfile  health_check.py  install_linux.sh  install_macOS.sh  install_windows.bat  lirox-compact.Modelfile  lirox.bat  lirox.ps1  lirox_v2_rebuild.md  package-lock.json  package.json  pyproject.toml  requirements.txt  run_hf_bnb.py  scratch_cleanup.py  skills_config.json  (+13 more)
.github/workflows/: dependency-bootstrap.yml
.next/: trace
.next/cache/: .tsbuildinfo
.next/server/: _error.js  app-paths-manifest.json  next-font-manifest.js  next-font-manifest.json  server-reference-manifest.json  webpack-runtime.js
data/: learning_engine.json
data/memory/: long_term.json  long_term_test2.json
data/mind/: learnings.json  soul.json
frontend/: package-lock.json  vite.config.js
frontend/src/: App.jsx  index.css
lirox/: __init__.py  __main__.py  config.py  main.py  main_web.py  soul.py  web.py
lirox.v1.0.bak/: __main__.py  config.py
lirox.v1.0.bak/agent/: profile.py
lirox.v1.0.bak/agents/: __init__.py  agent_builder.py  base_agent.py  personal_agent.py
lirox.v1.0.bak/autonomy/: filesystem_manager.py
lirox.v1.0.bak/memory/: session_manager.py  session_store.py
lirox.v1.0.bak/mind/: learnings.py  soul.py
lirox.v1.0.bak/onboarding/: niche_profiles.py
lirox.v1.0.bak/orchestrator/: master.py
lirox.v1.0.bak/skills/: manager.py
lirox.v1.0.bak/tools/: __init__.py  browser.py
lirox.v1.0.bak/ui/: progress_ui.py  wizard.py
lirox.v1.0.bak/utils/: errors.py  input_validator.py  llm.py
lirox.v1.0.bak/verify/: __init__.py  disk.py  receipt.py
lirox/agent/: __init__.py  autonomous_core.py  core.py  executor.py  learning_engine.py  memory.py  planner.py  policy.py  profile.py  reasoner.py  researcher.py  scheduler.py  tier.py  unified_executor.py
lirox/agents/: __init__.py  agent_builder.py  agent_creation_wizard.py  agent_factory.py  agent_manager.py  base_agent.py  browser_agent.py  chat_agent.py  classifier.py  code_agent.py  code_agent_v2.py  executor.py  finance_agent.py  manager.py  personal_agent.py  profile.py  registry.py  research_agent.py  specialized_agents.py  thinking_engine.py
lirox/audit/: __init__.py  logger.py
lirox/autonomy/: __init__.py  auto_learner.py  autonomous_resolver.py  code_executor.py  code_generator.py  code_intelligence.py  code_tester.py  code_validator.py  fallback_strategies.py  permission_system.py  self_improver.py
scratch/: full_system_test.py  test_export.json  test_out.txt  test_regex.py  user_request.json
scripts/: audit_lirox.py  compress_model.py  demo_browser_realdata.py  professional_audit.py  smoke_policy.py  smoke_research.py  smoke_web.py  verify_browser_v071.py  verify_v0.4.2_chaining.py
src/app/: page.tsx  (+1 more)
tests/: test_aimlapi_integration.py  test_classifier.py  test_content_generator.py  test_database.py  test_dependency_bootstrap.py  test_design_system.py  test_document_creators.py  test_execution.py  test_file_generation_safety.py  test_health.py  test_learning.py  test_llm_router.py  test_personalization.py  test_phase0_learning.py  test_v071_hardening.py  test_v0_3.py  test_v1_features.py  test_vertical_slice.py
(+324 files in other folders)
