[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lirox"
version = "3.0.0"
description = "Intelligence as an Operating System. Terminal-first autonomous personal AI agent."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "Baljot Singh"}]
keywords = ["ai", "agent", "cli", "autonomous", "llm", "personal-ai", "terminal"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/baljotsingh/lirox"
Repository = "https://github.com/baljotsingh/lirox"
Issues = "https://github.com/baljotsingh/lirox/issues"

dependencies = [
    "rich>=13.0.0",
    "prompt-toolkit>=3.0.0",
    "psutil>=5.9.0",
    "google-genai>=0.3.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "duckduckgo-search>=6.1.0",
]

[project.optional-dependencies]
full = ["openai>=1.0.0", "anthropic>=0.7.0"]

[project.scripts]
lirox = "lirox.main:main"

[tool.setuptools.packages.find]
include = ["lirox*"]
